Fix cta container position bug on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,6 @@ i {
 
 .cta-container {
     width: 100%;
-    position: fixed;
     background-color: #4c956c;
 }
 
